<resources>
    <string name="app_name">My Application</string>
    <string name="hello_message">HelloWorld </string>
    <string name="ButtonText">I\'m a button</string>
    <string name="TextView">Login</string>
    <string name="TextView1">password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch">What does  this do</string>
    <string name="Image">Camera</string>
    <string name="Hint1">login name</string>
    <string name="Hint2">Password</string>
    <string name="dialog_title">TITLE</string>
    <string name="dialog_message">This is my activity</string>
    <string name="ok">OK</string>
    <string name="StartChat">Start Chat</string>
    <string name="cancel">Cancel</string>
    <string name="SendButton">SEND CHAT</string>
    <string name="messageText">New Text</string>
</resources>
