<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="com.example.admin.androidlabs.ListItemActivity">

<RadioButton
    android:id="@+id/RadioButton"
    android:layout_height="wrap_content"
    android:text="@string/RadioButton"
    android:layout_columnWeight="1"
    android:layout_gravity="fill"

    />

 <CheckBox
     android:id="@+id/Checkbox"
     android:layout_height="wrap_content"
     android:text="@string/CheckBox"
     android:layout_columnWeight="1"
     android:layout_gravity="fill"
     />
 <Switch
     android:id="@+id/Switch1"
     android:layout_height="wrap_content"
     android:text="@string/Switch"
     android:layout_columnWeight="1"
     android:layout_gravity="fill"

     />

 <ImageButton
     android:id="@+id/Image"
     android:layout_height="wrap_content"
     android:layout_columnWeight="1"
     android:layout_gravity="fill"
     android:src="@android:drawable/ic_menu_camera"
     android:text="@string/Image" />






 </GridLayout>






