<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:text="@string/TextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.androidlabs.LoginActivity">

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView"
        />

    <EditText
        android:id="@+id/EdiTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hint1"
        android:inputType="textEmailAddress"
        />
    
    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView1"
        />

    <EditText
        android:id="@+id/ETextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hint2"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/Button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Button"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"

        />



</LinearLayout>

